--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,9 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven {url "https://jitpack.io"}
+        maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/'}
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.1'
@@ -21,9 +24,26 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven {url "https://jitpack.io"}
+        maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/'}
+
     }
 }
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+ext {
+    // Sdk and tools
+    targetSdkVersion = 28
+    compileSdkVersion = 28
+    buildToolsVersion = '28.0.0'
+    // Google Support
+    supportLibraryVersion = '28.0.0'
+    constraintlayoutVersion = '1.1.3'
+    junitVersion = '4.12'
+    // App dependencies
+    butterknifeVersion = '9.0.0-rc1'
+    eventbusVersion = '3.0.0'
 }
