--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,7 +53,9 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     compile project(':libcore')
     compile project(':libcommon')
-
+    // glide 图片加载
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'jp.wasabeef:glide-transformations:2.0.1'
     // 状态栏沉浸：https://github.com/gyf-dev/ImmersionBar
     api 'com.gyf.barlibrary:barlibrary:2.3.0'
     // 侧滑功能：https://github.com/bingoogolapple/BGASwipeBackLayout-Android
