--- a/libcore/build.gradle
+++ b/libcore/build.gradle
@@ -24,7 +24,9 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-
+    compile 'com.squareup.okio:okio:1.13.0'
+    compile 'com.squareup.okhttp3:okhttp:3.9.1'
+    compile 'com.google.code.gson:gson:2.8.0'
     compile "com.android.support:appcompat-v7:$rootProject.ext.supportLibraryVersion"
 
 
